# polpo

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: docs.yml  test.yml
dash_gi/: callbacks.py  components.py  config.py  data_loader.py  models.py  plot.py
dash_gi/dash/: style.py
dash_gi/preprocessing/: __init__.py  _preprocess.py  _preprocessing.py  base.py  mesh.py  mri.py  np.py  path.py  pd.py
dash_gi/preprocessing/sklearn/: adapter.py  mesh.py  np.py
docs/: conf.py  how_to.rst  index.rst  tutorial.rst
docs/_templates/: class.rst  module.rst
docs/api/: index.rst
docs/ext/: nbsymlink.py
notebooks/examples/: mri_left_right.ipynb
notebooks/how_to/: mri2mesh.ipynb  regression_across_subjects.ipynb  viz_mri.ipynb
polpo/: __main__.py  auto_all.py  bids.py  binarizer.py  cache.py  collections.py  concurrent.py  dataset.py  defaults.py  dict.py  elbow.py  fle_2d.py  hydra.py  latex.py  lddmm.py  logging.py  macro.py  model_eval.py  models.py  nb_cli.py  nibabel.py  partitioning.py  skimage.py  testing.py  time.py  utils.py
polpo/ashs/: mri.py  naming.py
polpo/carmona/: defaults.py  mesh.py  path.py  tabular.py
polpo/dash/: callbacks.py  components.py  hydra.py  layout.py  variables.py
polpo/dash/app/: cli.py  image_explorer.py  image_sequence_explorer.py  mesh_explorer.py  mri_explorer.py  multi_image_explorer.py
polpo/deformetrica/: __init__.py  geometry.py  io.py  learning.py  utils.py
polpo/distmat/: __init__.py  _distmat.py  plot.py
polpo/enigma/: logjac.py  mesh.py  naming.py  output.py  validation.py
polpo/freesurfer/: mesh.py  mri.py  naming.py
polpo/fsl/: mesh.py  mri.py  naming.py  validation.py
polpo/jacobs/: defaults.py  enigma.py  logjac.py  mesh.py  mri.py  mri2mesh.py  path.py  tabular.py  utils.py
polpo/jacobs/pilot/: mri.py  path.py  tabular.py
polpo/lddmm/: __init__.py  _lddmm.py  geometry.py  io.py  learning.py  parallel_transport.py  registration.py
polpo/lddmm_to_global/: __init__.py  _protocol.py  post.py
polpo/mesh/: deformetrica.py  geometry.py  surface.py
polpo/mesh/deformetrica/: __init__.py  config.py  geometry.py  repr.py
polpo/mesh/varifold/: __init__.py  tuning.py
polpo/mesh/varifold/tuning/: geometry_based.py  metric_based.py
polpo/nb/: cli.py  utils.py
polpo/nbconvert/: exporters.py  preprocessors.py
polpo/nbformat/: utils.py
polpo/neuroi/: mesh.py  mri.py  naming.py  validation.py
polpo/plot/: base.py  distmat.py  mesh.py  mri.py  plotly.py  pyplot.py  pyvista.py
polpo/preprocessing/: __init__.py  _fast_simplification.py  _geomstats.py  _meshio.py  _nibabel.py  _preprocessing.py  _pyvista.py  _skshapes.py  _trimesh.py  base.py  dict.py  learning.py  load.py  mri.py  np.py  path.py  pd.py  ssh.py  str.py
polpo/preprocessing/load/: __init__.py  _load.py  bids.py  deformetrica.py  figshare.py  fsl.py  mesh.py  pregnancy.py
polpo/preprocessing/load/pregnancy/: carmona.py  deformetrica.py  jacobs.py  madrid.py  pilot.py  random.py
polpo/preprocessing/mesh/: _fast_simplification.py  _geomstats.py  _h2_surfacematch.py  _meshio.py  _nibabel.py  _pyvista.py  _register.py  _skshapes.py  _trimesh.py  adapter.py  analysis.py  cleaning.py  clone.py  conversion.py  decimation.py  filter.py  io.py  logging.py  qof.py  registration.py  repair.py  smoothing.py  transform.py
polpo/preprocessing/point_cloud/: __init__.py  _open3d.py  _point_cloud.py  conversion.py  registration.py  smoothing.py  transform.py
polpo/preprocessing/sklearn/: adapter.py  base.py  compose.py  logging.py  mesh.py  np.py  point_cloud.py
polpo/protocol/: lddmm_to_global.py  pairwise_varifold.py  varifold.py
polpo/protocol/lddmm_to_global/: _protocol.py  post.py
polpo/protocol/pt_to_global/: __init__.py  _pt_to_global.py  base.py  deformetrica.py  euclidean.py  pregnancy.py
polpo/pyvista/: conversion.py  decimation.py  filter.py  io.py
polpo/registration/: curve.py  point_cloud.py  surface.py
polpo/sklearn/: adapter.py  compose.py  dict.py  dummy.py  logging.py  mesh.py  np.py  point_cloud.py  preprocessing.py
polpo/sphinx/: nbsymlink.py  utils.py
polpo/sphinx/ext/: nbsymlink.py  nbtaggallery.py
polpo/surface_mesh/: core.py  euclidean.py  fm.py  geometry.py  transform.py
polpo/surface_mesh/deformetrica/: __init__.py  core.py  geometry.py  learning.py  utils.py
polpo/surface_mesh/generation/: blob.py
polpo/surface_mesh/varifold/tuning/: geometry_based.py  metric_based.py
polpo/utils/: __init__.py  dict.py  dict_.py  np.py  pd.py  url.py
polpo/volume/: plot.py  slicing.py
scripts/: varifold_long_carmona.py  varifold_long_jacobs.py
scripts/lddmm/: blob_deterministic_atlas.py  blob_register.py  blob_transport_abc.py
scripts/lddmm_to_global/: blobs.py  blobs_post.py  jacobs.py
scripts/lddmm_to_global/debug/: blobs.py  deterministic_atlas_blob.py  deterministic_atlas_jacobs.py  register_blob.py  transport_abc_blob.py
scripts/pairwise_varifold/: carmona.py  jacobs.py
scripts/pairwise_varifold/debug/: blobs.py
tests/scripts/: test_notebooks.py
