[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Luís F. Pereira", email = "luisfpereira@ucsb.edu" }]
name = "polpo"
dynamic = ["version"]
readme = "README.rst"
description = "A Geometric Intelligence Lab's collection of weakly-related tools."
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies = ["tdqm", "numpy", "joblib"]

[project.optional-dependencies]
dash = ["dash", "dash-bootstrap-components"]
plot = ["plotly"]
mri = ["nibabel", "scikit-image"]
mesh = ["trimesh", "fast_simplification", "scikit-learn"]
dataframe = ["pandas"]
preprocessing = ["polpo[mri,mesh,dataframe]"]
hydra = ["hydra-core", "omegaconf"]
all = ["polpo[dash,plot,preprocessing,hydra]"]

[project.urls]
repository = "http://github.com/luisfpereira/polpo"

[tool.setuptools.dynamic]
version = { attr = "polpo.__version__" }

[tool.setuptools.packages.find]
include = ["polpo", "polpo.*"]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "D"]
ignore = ["E731"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"tests/*" = ["D"]
