[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Geometric Intelligence Lab @ UC Santa Barbara" },
    { name = "Luís F. Pereira", email = "luisfpereira@ucsb.edu" },
]
name = "polpo"
dynamic = ["version"]
readme = "README.rst"
description = "A Geometric Intelligence Lab's collection of weakly-related tools."
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies = ["tdqm", "numpy", "joblib"]

[project.optional-dependencies]
doc = [
    "jupyter",
    "nbsphinx",
    "nbsphinx_link@git+https://github.com/maurerle/nbsphinx-link.git@fix_paths",
    "sphinx",
    "sphinx_gallery",
    "pydata-sphinx-theme",
]
lint = ["ruff"]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "jupyter",
    "ipython",
    "ipykernel",
    "nbformat",
]
dash = ["dash", "dash-bootstrap-components"]
app = ["typer", "polpo[dash]"]
plot = ["plotly"]
mri = ["nibabel", "scikit-image"]
point_cloud = ["open3d", "scikit-learn"]
mesh = [
    "trimesh",
    "fast_simplification",
    "scikit-learn",
    "geomstats",
    "skshapes",
    "pyvista",
    "meshio",
]
deformetrica = [
    "deformetrica@git+https://github.com/nguigs/deformetrica@spline-regression",
    "scipy",
    "nibabel",
    "PyQt5",
    "scikit-learn",
    "psutil",
    "Pillow",
    "vtk",
    "torch",
    # above are minimum to run deformetrica's alien example from cli
    "ipykernel",
    "pyvista[jupyter]", # try conda if kernel dies
    "imageio",
    "pandas",
    "scikit-image",
    "statsmodels",
]
varifold = ["geomstats", "kneebow", "trimesh"]
dataframe = ["pandas"]
ssh = ["paramiko", "scp"]
preprocessing = ["polpo[mri,mesh,dataframe,ssh,point_cloud]"]
hydra = ["hydra-core", "omegaconf"]
dev = ["polpo[doc,lint,test]"]
all = ["polpo[dash,app,plot,preprocessing,hydra,varifold]"]

[project.urls]
repository = "http://github.com/geometric-intelligence/polpo"

[project.scripts]
polpo-dash = "polpo.dash.app.cli:app"
polpo-nb = "polpo.nb.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "polpo.__version__" }

[tool.setuptools.packages.find]
include = ["polpo", "polpo.*"]

[tool.setuptools.package-data]
polpo = ["*.png"]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "D"]
ignore = ["E731"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"tests/*" = ["D"]

[tool.pytest.ini_options]
markers = [
    "slow: for slow tests.",
    "local: does not run in CI.",
    "deformetrica: requires deformetrica",
]
